--- a/dw-logger/src/main/resources/application.properties
+++ b/dw-logger/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=80
 
+#============== kafka ===================
+# 指定kafka 代理地址，可以多个
+spring.kafka.bootstrap-servers=hadoop1:9092
+
+
+# 指定消息key和消息体的编解码方式
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
