--- a/dw-logger/src/main/resources/log4j.properties
+++ b/dw-logger/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.appender.atguigu.MyConsole=org.apache.log4j.ConsoleAppender
-log4j.appender.atguigu.MyConsole.target=System.error
+log4j.appender.atguigu.MyConsole.target=System.err
 log4j.appender.atguigu.MyConsole.layout=org.apache.log4j.PatternLayout    
 log4j.appender.atguigu.MyConsole.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %10p (%c:%M) - %m%n 
 
