--- a/dw-publisher/pom.xml
+++ b/dw-publisher/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>dw-common</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
