--- a/dw-publisher/src/main/resources/application.properties
+++ b/dw-publisher/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+server.port=8070
 
 spring.datasource.url=jdbc:mysql://hadoop2:3306/dm0925?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=123123
+
+spring.elasticsearch.jest.uris=http://hadoop1:9200,http://hadoop2:9200
