--- a/dw-realtime/src/main/resources/log4j.properties
+++ b/dw-realtime/src/main/resources/log4j.properties
@@ -3,4 +3,4 @@ log4j.appender.atguigu.MyConsole.target=System.out
 log4j.appender.atguigu.MyConsole.layout=org.apache.log4j.PatternLayout    
 log4j.appender.atguigu.MyConsole.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %10p (%c:%M) - %m%n 
 
-log4j.logger.root=error,atguigu.MyConsole
+log4j.rootLogger=error,atguigu.MyConsole
